hicolor_dir = join_paths(get_option('datadir'), 'icons', 'hicolor')

install_subdir(
    '16x16',
    install_dir: hicolor_dir
)

install_subdir(
    '24x24',
    install_dir: hicolor_dir
)

install_subdir(
    '32x32',
    install_dir: hicolor_dir
)

install_subdir(
    '48x48',
    install_dir: hicolor_dir
)

install_subdir(
    '64x64',
    install_dir: hicolor_dir
)

install_subdir(
    '128x128',
    install_dir: hicolor_dir
)

install_subdir(
    'symbolic',
    install_dir: hicolor_dir
)

