set (EMBLEMSDIR "${ICONDIR}/emblems")
set (EMBLEMS2XDIR "${ICONDIR}/emblems@2x")
# 128x128
file (GLOB EMBLEMS_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${EMBLEMS_128} DESTINATION ${EMBLEMSDIR}/128)
install (FILES ${EMBLEMS_128} DESTINATION ${EMBLEMS2XDIR}/128)
# 64x64
file (GLOB EMBLEMS_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${EMBLEMS_64} DESTINATION ${EMBLEMSDIR}/64)
install (FILES ${EMBLEMS_64} DESTINATION ${EMBLEMS2XDIR}/64)
# 48x48
file (GLOB EMBLEMS_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${EMBLEMS_48} DESTINATION ${EMBLEMSDIR}/48)
install (FILES ${EMBLEMS_48} DESTINATION ${EMBLEMS2XDIR}/48)
# 32x32
file (GLOB EMBLEMS_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${EMBLEMS_32} DESTINATION ${EMBLEMSDIR}/32)
install (FILES ${EMBLEMS_32} DESTINATION ${EMBLEMS2XDIR}/32)
# 24x24
file (GLOB EMBLEMS_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${EMBLEMS_24} DESTINATION ${EMBLEMSDIR}/24)
install (FILES ${EMBLEMS_24} DESTINATION ${EMBLEMS2XDIR}/24)
# 16x16
file (GLOB EMBLEMS_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${EMBLEMS_16} DESTINATION ${EMBLEMSDIR}/16)
install (FILES ${EMBLEMS_16} DESTINATION ${EMBLEMS2XDIR}/16)
# symbolic
file (GLOB EMBLEMS_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${EMBLEMS_SYMBOLIC} DESTINATION ${EMBLEMSDIR}/symbolic)
