set (EMOTESDIR "${ICONDIR}/emotes")
set (EMOTES2XDIR "${ICONDIR}/emotes@2x")
# 128x128
file (GLOB EMOTES_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${EMOTES_128} DESTINATION ${EMOTESDIR}/128)
install (FILES ${EMOTES_128} DESTINATION ${EMOTES2XDIR}/128)
# 64x64
file (GLOB EMOTES_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${EMOTES_64} DESTINATION ${EMOTESDIR}/64)
install (FILES ${EMOTES_64} DESTINATION ${EMOTES2XDIR}/64)
# 48x48
file (GLOB EMOTES_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${EMOTES_48} DESTINATION ${EMOTESDIR}/48)
install (FILES ${EMOTES_48} DESTINATION ${EMOTES2XDIR}/48)
# 32x32
file (GLOB EMOTES_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${EMOTES_32} DESTINATION ${EMOTESDIR}/32)
install (FILES ${EMOTES_32} DESTINATION ${EMOTES2XDIR}/32)
# 24x24
file (GLOB EMOTES_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${EMOTES_24} DESTINATION ${EMOTESDIR}/24)
install (FILES ${EMOTES_24} DESTINATION ${EMOTES2XDIR}/24)
# 16x16
file (GLOB EMOTES_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${EMOTES_16} DESTINATION ${EMOTESDIR}/16)
install (FILES ${EMOTES_16} DESTINATION ${EMOTES2XDIR}/16)
# symbolic
file (GLOB EMOTES_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${EMOTES_SYMBOLIC} DESTINATION ${EMOTESDIR}/symbolic)
