set (MIMESDIR "${ICONDIR}/mimes")
set (MIMES2XDIR "${ICONDIR}/mimes@2x")
# 128x128
file (GLOB MIMES_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${MIMES_128} DESTINATION ${MIMESDIR}/128)
install (FILES ${MIMES_128} DESTINATION ${MIMES2XDIR}/128)
# 64x64
file (GLOB MIMES_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${MIMES_64} DESTINATION ${MIMESDIR}/64)
install (FILES ${MIMES_64} DESTINATION ${MIMES2XDIR}/64)
# 48x48
file (GLOB MIMES_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${MIMES_48} DESTINATION ${MIMESDIR}/48)
install (FILES ${MIMES_48} DESTINATION ${MIMES2XDIR}/48)
# 32x32
file (GLOB MIMES_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${MIMES_32} DESTINATION ${MIMESDIR}/32)
install (FILES ${MIMES_32} DESTINATION ${MIMES2XDIR}/32)
# 24x24
file (GLOB MIMES_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${MIMES_24} DESTINATION ${MIMESDIR}/24)
install (FILES ${MIMES_24} DESTINATION ${MIMES2XDIR}/24)
# 16x16
file (GLOB MIMES_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${MIMES_16} DESTINATION ${MIMESDIR}/16)
install (FILES ${MIMES_16} DESTINATION ${MIMES2XDIR}/16)
# symbolic
file (GLOB MIMES_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${MIMES_SYMBOLIC} DESTINATION ${MIMESDIR}/symbolic)
