set (PLACESDIR "${ICONDIR}/places")
set (PLACES2XDIR "${ICONDIR}/places@2x")
# 128x128
file (GLOB PLACES_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${PLACES_128} DESTINATION ${PLACESDIR}/128)
install (FILES ${PLACES_128} DESTINATION ${PLACES2XDIR}/128)
# 64x64
file (GLOB PLACES_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${PLACES_64} DESTINATION ${PLACESDIR}/64)
install (FILES ${PLACES_64} DESTINATION ${PLACES2XDIR}/64)
# 48x48
file (GLOB PLACES_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${PLACES_48} DESTINATION ${PLACESDIR}/48)
install (FILES ${PLACES_48} DESTINATION ${PLACES2XDIR}/48)
# 32x32
file (GLOB PLACES_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${PLACES_32} DESTINATION ${PLACESDIR}/32)
install (FILES ${PLACES_32} DESTINATION ${PLACES2XDIR}/32)
# 24x24
file (GLOB PLACES_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${PLACES_24} DESTINATION ${PLACESDIR}/24)
install (FILES ${PLACES_24} DESTINATION ${PLACES2XDIR}/24)
# 16x16
file (GLOB PLACES_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${PLACES_16} DESTINATION ${PLACESDIR}/16)
install (FILES ${PLACES_16} DESTINATION ${PLACES2XDIR}/16)
# symbolic
file (GLOB PLACES_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${PLACES_SYMBOLIC} DESTINATION ${PLACESDIR}/symbolic)
