set (STATUSDIR "${ICONDIR}/status")
set (STATUS2XDIR "${ICONDIR}/status@2x")
# 128x128
file (GLOB STATUS_128 "${CMAKE_CURRENT_SOURCE_DIR}/128/*")
install (FILES ${STATUS_128} DESTINATION ${STATUSDIR}/128)
install (FILES ${STATUS_128} DESTINATION ${STATUS2XDIR}/128)
# 64x64
file (GLOB STATUS_64 "${CMAKE_CURRENT_SOURCE_DIR}/64/*")
install (FILES ${STATUS_64} DESTINATION ${STATUSDIR}/64)
install (FILES ${STATUS_64} DESTINATION ${STATUS2XDIR}/64)
# 48x48
file (GLOB STATUS_48 "${CMAKE_CURRENT_SOURCE_DIR}/48/*")
install (FILES ${STATUS_48} DESTINATION ${STATUSDIR}/48)
install (FILES ${STATUS_48} DESTINATION ${STATUS2XDIR}/48)
# 32x32
file (GLOB STATUS_32 "${CMAKE_CURRENT_SOURCE_DIR}/32/*")
install (FILES ${STATUS_32} DESTINATION ${STATUSDIR}/32)
install (FILES ${STATUS_32} DESTINATION ${STATUS2XDIR}/32)
# 24x24
file (GLOB STATUS_24 "${CMAKE_CURRENT_SOURCE_DIR}/24/*")
install (FILES ${STATUS_24} DESTINATION ${STATUSDIR}/24)
install (FILES ${STATUS_24} DESTINATION ${STATUS2XDIR}/24)
# 16x16
file (GLOB STATUS_16 "${CMAKE_CURRENT_SOURCE_DIR}/16/*")
install (FILES ${STATUS_16} DESTINATION ${STATUSDIR}/16)
install (FILES ${STATUS_16} DESTINATION ${STATUS2XDIR}/16)
# symbolic
file (GLOB STATUS_SYMBOLIC "${CMAKE_CURRENT_SOURCE_DIR}/symbolic/*")
install (FILES ${STATUS_SYMBOLIC} DESTINATION ${STATUSDIR}/symbolic)
