fs = import('fs')
icon_sizes = ['16', '24', 'symbolic']

icon_names = [
  'align-horizontal-baseline',
  'align-horizontal-center',
  'align-horizontal-left',
  'align-horizontal-left-to-anchor',
  'align-horizontal-right',
  'align-horizontal-right-to-anchor',
  'align-vertical-baseline',
  'align-vertical-bottom',
  'align-vertical-bottom-to-anchor',
  'align-vertical-center',
  'align-vertical-top',
  'align-vertical-top-to-anchor',
  'application-exit',
  'close',
  'distribute-horizontal-center',
  'distribute-horizontal-gaps',
  'distribute-horizontal-left',
  'distribute-horizontal-right',
  'distribute-vertical-bottom',
  'distribute-vertical-center',
  'distribute-vertical-gaps',
  'distribute-vertical-top',
  'document-export',
  'document-import',
  'document-new',
  'document-open',
  'document-print',
  'document-properties',
  'document-revert',
  'document-save-as',
  'document-save',
  'edit-clear',
  'edit-copy',
  'edit-cut',
  'edit-delete',
  'edit-find',
  'edit-paste',
  'edit-redo',
  'edit-select-all',
  'edit',
  'edit-undo',
  'format-indent-less',
  'format-indent-more',
  'format-justify-center',
  'format-justify-fill',
  'format-justify-left',
  'format-justify-right',
  'go-down',
  'go-up',
  'help-contents',
  'list-add',
  'list-remove',
  'object-flip-horizontal',
  'object-flip-vertical',
  'object-group',
  'object-rotate-left',
  'object-rotate-right',
  'object-select',
  'object-ungroup',
  'open-menu',
  'pan-down',
  'panel-left',
  'pan-end',
  'pan-start',
  'pan-up',
  'path-break-apart',
  'path-combine',
  'path-cut',
  'path-difference',
  'path-division',
  'path-exclusion',
  'path-flatten',
  'path-fracture',
  'path-intersection',
  'path-split',
  'path-union',
  'selection-bottom',
  'selection-lower',
  'selection-raise',
  'selection-top',
  'tools-check-spelling',
  'view-fullscreen',
  'view-refresh',
  'view-restore',
  'window-close',
  'window-new',
  'zoom-in',
  'zoom-original',
  'zoom-out'
]

foreach name : icon_names
  foreach size : icon_sizes
    if size == 'symbolic'
      name = name + '-symbolic'
    endif

    if fs.exists(meson.project_source_root () / size / name + '.svg')
      install_data(
        name + '.svg',
        install_dir: icon_dir / ' actions' / size,
      )
    endif
  endforeach
endforeach
